--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,14 @@
 /*
 Resetear el navegador
 */
+html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden;
+}
 
 * {
   box-sizing: border-box;
@@ -15,6 +23,7 @@ Crear container
 .container {
   width: 100%;
   margin: 0 auto;
+
 }
 
 .row:before, .row:after {
@@ -100,12 +109,15 @@ formula para el ancho de las columnas (numero columnas / 12) * 100
 .sub {
   font-size: 1em;
   color:rgb(171, 171, 179);
-  text-align: center;
+  display: inline-block;
+  margin-right: 1em;
+  margin-top: 0.4em;
 }
+
 
 #home {
   color: #fff;
-  margin-left: 30em;
+object-position: right;
 }
 
 .fa-bars {
@@ -114,7 +126,7 @@ formula para el ancho de las columnas (numero columnas / 12) * 100
   padding: 0.2em;
   border-radius: 3px;
   margin-left: 19em;
-  margin-top: 0.6em;
+  margin-top: 0.4em;
   display: none!important;
 }
 
@@ -189,6 +201,9 @@ a {
 
 .w-img{
   width: 18.75em;
+  height: auto;
+  margin-top: 2em;
+  box-shadow: 2px 2px 2px 2px rgba(0,0,0,.1);
 }
 
 .boximg {
@@ -197,7 +212,7 @@ a {
   border-radius: 3px;
   object-fit: cover;
   box-sizing: border-box;
-  margin-top: 2em;
+
 }
 
 .border {
@@ -261,7 +276,6 @@ footer {
 @media (max-width: 450px) {
 
   #title{
-    width: 16.666667%!important;
     font-size: 1.2em;
     font-weight: 400;
   }
@@ -273,4 +287,26 @@ footer {
   .fa-bars {
     display: block!important;
   }
+
+  #nature, #brave {
+    width: 100%;
+    margin: 0;
+  }
+
+  #nature {
+    margin-bottom: 1em;
+  }
+
+  #brave {
+    margin-top: 1em;
+    margin-bottom: 2em;
+  }
+
+  #fst-box, #scnd-box, #thrd-box {
+    width: 100%;
+  }
+
+#fst-box, #scnd-box, #thrd-box{
+  margin-left: 1em;
+}
 }
